<resources>
    <string name="app_name">BookMyDoc</string>

    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="doctor_loginid">Doctor loginID</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_doctor_id">Please doctor loginID</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="dont_have_an_account_register">Don’t have an account? <strong><font fgcolor='#468CFD'>Sign Up</font></strong></string>
    <string name="next">Next</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_str">Manage Your appointments and\ncreate new ones.</string>


    <string name="dr_login"><u>Dr Login</u></string>
    <string name="name">Name</string>
    <string name="please_enter_name">Please Enter your name</string>
    <string name="mobile">Mobile</string>
    <string name="please_enter_mobile">Please Enter your mobile number</string>
    <string name="signup">Sign Up</string>
    <string name="have_an_account_login">have an account? <strong><font fgcolor='#468CFD'>Login</font></strong></string>

    <string name="join_us_to_start_searching">Join us to start searching</string>
    <string name="find_your_medical_solution">find your medical solution!</string>

    <string name="welcome_back">Welcome Back!</string>
    <string name="john_doe">John Doe</string>
    <string name="search_doctor_medicine">Search doctor, medicine…</string>
    <string name="category">Category</string>
    <string name="view_more">View more</string>

    <string name="brain">Brain</string>
    <string name="dental">Dental</string>
    <string name="eye">Eye</string>
    <string name="doctors_20">20 Doctors</string>
    <string name="doctors_15">15 Doctors</string>
    <string name="doctors_10">10 Doctors</string>


    <string name="patient">Patient</string>
    <string name="experience">Experience</string>
    <string name="rating">Rating</string>
    <string name="years_2">2 Years</string>
    <string name="_10k">10K</string>

    <string name="top_doctors">Top Doctors</string>
    <string name="doctors_location">Doctors Location</string>
    <string name="choose_day">Choose Day</string>

    <string name="choose_topic">Choose Topic</string>
    <string name="lbl_choose">Choose</string>

    <string name="please_wait">Please wait…</string>

    <string name="please_press_back_again_to_exit">Please back again to Exit</string>

    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Condition </u></string>

    <string name="gender">Gender</string>

    <string name="rb_lbl_male">Male</string>
    <string name="rb_label_female">Female</string>
    <string name="btn_lbl_update">Update</string>
    <string name="title_complete_profile">Complete Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="read_storage_permission_denied">Oops! It seems like you just denied the permission needed. You can also allow it from settings.</string>
    <string name="image_selection_failed">Something went wrong during image selection</string>

    <string name="error_mobile_number">Please enter mobile number</string>

    <string name="profile_update_success_message">Profile updated successfully</string>
</resources>