<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:background="@color/white"
            tools:context=".view.RegisterActivity">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivProfile"
                android:transitionName="profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:src="@drawable/ic_login_illu" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/join_us_to_start_searching"
                android:textColor="#6E7DB1"
                android:textSize="26sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:text="@string/find_your_medical_solution"
                android:textColor="#6E7DB1"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ipFullName"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                app:boxBackgroundMode="none"
                app:errorEnabled="false"
                app:errorTextAppearance="@style/error_appearance"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mEdtFullName"
                    style="@style/EditTextTheme"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/name"
                    android:inputType="textCapWords"
                    android:tag="@string/please_enter_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ipEmail"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                app:boxBackgroundMode="none"
                app:errorEnabled="false"
                app:errorTextAppearance="@style/error_appearance"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mEdtEmail"
                    style="@style/EditTextTheme"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:tag="@string/please_enter_email" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp1"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/bg_edittextbox"
                    android:gravity="center_vertical"
                    app:ccp_contentColor="#6E7DB1"
                    app:ccp_defaultNameCode="us"
                    app:ccp_textSize="@dimen/_10sdp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ipMobile"
                    style="@style/Widget.Design.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    app:boxBackgroundMode="none"
                    app:errorEnabled="false"
                    app:errorTextAppearance="@style/error_appearance"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mEdtMobile"
                        style="@style/EditTextTheme"
                        android:drawablePadding="@dimen/_10sdp"
                        android:hint="@string/mobile"
                        android:inputType="number"
                        android:maxEms="10"
                        android:tag="@string/please_enter_mobile" />

                </com.google.android.material.textfield.TextInputLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ipPassword"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                app:boxBackgroundMode="none"
                app:errorEnabled="false"
                app:errorTextAppearance="@style/error_appearance"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#6E7DB1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mEdtPassword"
                    style="@style/EditTextTheme"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:tag="@string/please_enter_password" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/rounded_blue"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:fontFamily="@font/nunito"
                android:gravity="center"
                android:text="@string/have_an_account_login"
                android:textColor="#ACACAC"
                android:textSize="16sp" />

        </LinearLayout>



</androidx.core.widget.NestedScrollView>
</layout>