<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".view.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivProfile"
                android:transitionName="profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_80sdp"
                android:src="@drawable/ic_login_illu" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ipEmail"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                app:boxBackgroundMode="none"
                app:errorEnabled="false"
                app:errorTextAppearance="@style/error_appearance"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mEdtEmail"
                    style="@style/EditTextTheme"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:tag="@string/please_enter_email" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ipPassword"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                app:boxBackgroundMode="none"
                app:errorEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#6E7DB1"
                app:errorTextAppearance="@style/error_appearance"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mEdtPassword"
                    style="@style/EditTextTheme"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:tag="@string/please_enter_password" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/rounded_blue"
                android:text="@string/login"
                android:textSize="16sp"
                android:fontFamily="@font/nunito_bold"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtForgot"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="#ACACAC"
                android:textSize="16sp" />


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtSignup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_20sdp"
            android:fontFamily="@font/nunito"
            android:gravity="center"
            android:text="@string/dont_have_an_account_register"
            android:textColor="#ACACAC"
            android:textSize="16sp" />
    </RelativeLayout>
</layout>