<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dashboard_bg"
        android:orientation="vertical"
        tools:context=".view.UserProfileActivity">

        <RelativeLayout
            android:id="@+id/rlToolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@drawable/toolbar_bg">

            <ImageButton
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_42sdp"
                android:layout_centerVertical="true"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/app_name"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:src="@drawable/ic_back" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center"
                android:text="@string/title_complete_profile"
                android:textColor="#FFF"
                android:textSize="24sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgProfile"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_user_placeholder" />

            <ImageView
                android:id="@+id/imgPic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:src="@drawable/ic_camera" />


        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ipFullName"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:boxBackgroundMode="none"
            app:errorEnabled="false"
            app:errorTextAppearance="@style/error_appearance"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mEdtFullName"
                style="@style/EditTextTheme"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/name"
                android:inputType="textCapWords"
                android:tag="@string/please_enter_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ipEmail"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:boxBackgroundMode="none"
            app:errorEnabled="false"
            app:errorTextAppearance="@style/error_appearance"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mEdtEmail"
                style="@style/EditTextTheme"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:tag="@string/please_enter_email" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp1"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/bg_edittextbox"
                android:gravity="center_vertical"
                app:ccp_contentColor="#6E7DB1"
                app:ccp_defaultNameCode="us"
                app:ccp_textSize="@dimen/_10sdp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ipMobile"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                app:boxBackgroundMode="none"
                app:errorEnabled="false"
                app:errorTextAppearance="@style/error_appearance"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mEdtMobile"
                    style="@style/EditTextTheme"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/mobile"
                    android:inputType="number"
                    android:maxEms="10"
                    android:tag="@string/please_enter_mobile" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="@font/nunito"
            android:text="@string/gender"
            android:textColor="#6E7DB1"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_lbl_male"
                android:textColor="#6E7DB1"
                android:checked="true"
                android:buttonTint="@color/theam"
                android:fontFamily="@font/nunito_semibold"/>


            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:textColor="#6E7DB1"
                android:text="@string/rb_label_female"
                android:buttonTint="@color/theam"
                android:fontFamily="@font/nunito_semibold" />

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/rounded_blue"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/btn_lbl_update"
            android:textColor="@color/white"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeMaxTextSize="16sp"
            app:autoSizeStepGranularity="2sp"
            android:textSize="16sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>