<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".view.DocotrLoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_80sdp"
                android:src="@drawable/ic_login_illu"
                android:transitionName="profile" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ipEmail"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                app:boxBackgroundMode="none"
                app:errorEnabled="false"
                app:errorTextAppearance="@style/error_appearance"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mEdtEmail"
                    style="@style/EditTextTheme"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/doctor_loginid"
                    android:inputType="number"
                    android:tag="@string/please_enter_doctor_id" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/rounded_blue"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="16sp" />


        </LinearLayout>

    </RelativeLayout>
</layout>